src/test/ui/parser/if-in-in.stderr
error: expected iterable, found keyword `in`
  --> $DIR/if-in-in.rs:2:14
   |
LL |     for i in in 1..2 {
   |           ---^^
   |           |
   |           If I were you, I would simply remove the duplicated `in`

error: aborting due to previous error

